[gd_scene load_steps=7 format=3 uid="uid://jg07g8xjabqm"]

[ext_resource type="Texture2D" uid="uid://b5jtrn180ul8i" path="res://placeholders/fantasy_borders/unit-head.png" id="1_obxfl"]
[ext_resource type="Script" path="res://units/unit_block.gd" id="1_vp8o3"]
[ext_resource type="Texture2D" uid="uid://dwe0t8iqv58nw" path="res://placeholders/faction_colors/faction-invalid.png" id="2_faged"]
[ext_resource type="Texture2D" uid="uid://d3wnpfqd5ox4k" path="res://placeholders/fantasy_borders/unit-selection.png" id="2_kwpep"]
[ext_resource type="Resource" uid="uid://bmecwpjyvt1kt" path="res://units/invalid.tres" id="2_xgl5g"]
[ext_resource type="Texture2D" uid="uid://7xb78bq7nbrd" path="res://placeholders/invalid_unit.png" id="4_5e7wb"]

[node name="UnitBlock" type="Node2D"]
script = ExtResource("1_vp8o3")
unit_base = ExtResource("2_xgl5g")

[node name="FactionBackground" type="Sprite2D" parent="."]
texture = ExtResource("2_faged")

[node name="Border" type="Sprite2D" parent="."]
texture = ExtResource("1_obxfl")

[node name="SelectionBorder" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_kwpep")

[node name="UnitIcon" type="Sprite2D" parent="."]
texture = ExtResource("4_5e7wb")
